// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`approving fact 1`] = `
<div
  className="fact approvingFact"
>
  <div
    className="sourceSection"
  >
    <span
      className="scoreTag"
    >
      <span>
        1337
         
      </span>
      <img
        alt="translated<pts>"
        src="test-file-stub"
      />
    </span>
    <a
      className="sourceLink"
      href="https://example.com"
      rel="noopener noreferrer"
      target="_BLANK"
    >
      <div
        className="siteNameContainer"
      >
        <img
          alt=""
          src="test-file-stub"
        />
         
        <span
          className="siteName"
        >
          EXAMPLE.COM
        </span>
      </div>
      <span
        className="articleTitle"
      />
    </a>
  </div>
</div>
`;

exports[`custom star image 1`] = `
<div
  className="fact approvingFact"
>
  <div
    className="sourceSection"
  >
    <span
      className="scoreTag"
    >
      <span>
        1337
         
      </span>
      <img
        alt="translated<pts>"
        src="custom.jpg"
      />
    </span>
    <a
      className="sourceLink"
      href="https://example.com"
      rel="noopener noreferrer"
      target="_BLANK"
    >
      <div
        className="siteNameContainer"
      >
        <img
          alt=""
          src="test-file-stub"
        />
         
        <span
          className="siteName"
        >
          EXAMPLE.COM
        </span>
      </div>
      <span
        className="articleTitle"
      />
    </a>
  </div>
</div>
`;

exports[`refuting fact 1`] = `
<div
  className="fact refutingFact"
>
  <div
    className="sourceSection"
  >
    <span
      className="scoreTag"
    >
      <span>
        1337
         
      </span>
      <img
        alt="translated<pts>"
        src="test-file-stub"
      />
    </span>
    <a
      className="sourceLink"
      href="https://example.com"
      rel="noopener noreferrer"
      target="_BLANK"
    >
      <div
        className="siteNameContainer"
      >
        <img
          alt=""
          src="test-file-stub"
        />
         
        <span
          className="siteName"
        >
          EXAMPLE.COM
        </span>
      </div>
      <span
        className="articleTitle"
      />
    </a>
  </div>
</div>
`;

exports[`with text 1`] = `
<div
  className="fact approvingFact"
>
  <div
    className="sourceSection"
  >
    <span
      className="scoreTag"
    >
      <span>
        1337
         
      </span>
      <img
        alt="translated<pts>"
        src="test-file-stub"
      />
    </span>
    <a
      className="sourceLink"
      href="https://example.com"
      rel="noopener noreferrer"
      target="_BLANK"
    >
      <div
        className="siteNameContainer"
      >
        <img
          alt=""
          src="test-file-stub"
        />
         
        <span
          className="siteName"
        >
          EXAMPLE.COM
        </span>
      </div>
      <span
        className="articleTitle"
      />
    </a>
  </div>
  <div
    className="userSection"
  >
    <div>
      <img
        alt=""
        height="24"
      />
      <div
        className="right"
      >
        <a
          className="container"
          href="https://testing.captainfact.io/u/undefined"
        >
          <strong>
            @undefined
          </strong>
        </a>
         
        <span
          className="userCommentText"
        >
          Foobar
        </span>
      </div>
    </div>
  </div>
</div>
`;
